src/containers/PerfectStock/Inventory/InventoryTable/TodaySkuTable/globals.scss
@import '../../../../../styles/tableReset';

#inventoryTodaySkuTable {
  background: none !important;
  overflow-x: none !important;

  /* width */
  &::-webkit-scrollbar {
    height: 10px !important;
  }

  /* Track */
  &::-webkit-scrollbar-track {
    border-radius: 5px;
    background-color: $grey_1 !important;
  }

  /* Handle */
  &::-webkit-scrollbar-thumb {
    background: $grey_6 !important;
    border-radius: 3px;
  }

  /* Handle on hover */
  &::-webkit-scrollbar-thumb:hover {
    background: $grey_6 !important;
  }

  // header section
  .rs-table-row-header {
    border-radius: 0 !important;
    border: none !important;
    border-bottom: none !important;
    // background: none !important;
    background: $light_gray_background !important;

    // column header cell
    .rs-table-cell-content {
      padding: 0 !important;
      display: flex !important;
      align-items: center !important;
      font-size: 12px !important;
      color: $grey_6 !important;
      background: $light_gray_background;
      font-weight: 500 !important;
    }
  }

  // body section
  .rs-table-body-row-wrapper {
    background: none !important;
    min-height: 600px !important;

    .rs-table-body-wheel-area {
      background: none;

      //  Table row property
      .rs-table-row {
        // height: 190px !important; //
        border-bottom: none;

        /* ============== ZEBRA PATTERN  =============== */
        &:nth-child(2n) {
          background: $light_gray_background !important;

          .rs-table-cell-content {
            background: $light_gray_background !important;
            padding: 0;
          }

          .rs-table-row-expanded {
            background: $light_gray_background !important;
            padding: 0;
            margin-left: 30px;
          }
        }

        &:nth-child(2n + 1) {
          background: $grey_1 !important;

          .rs-table-cell-content {
            background: $grey_1 !important;
            padding: 0;
          }

          .rs-table-row-expanded {
            background: $grey_1;
            padding: 0;
            margin-left: 30px;
          }
        }

        /* ============== FIRST CELL (TREAT SPECIAL)  =============== */
        .rs-table-cell-first {
          .rs-table-cell-content {
            padding: 0 !important;
            background: $light_gray_background !important;
            // remove any borders from cell to show it's outside tbale
            border: none !important;
            padding-top: 40px !important;
          }
        }
      }
    }
  }

  // scrollbar
  div[role='scrollbar'] {
    bottom: 10px !important;
    background: $grey_3;
    border-radius: 4px;
    position: fixed !important;
    opacity: 1;
    height: 10px;
    max-width: 90vw !important;
    margin-left: auto !important;

    &.rs-table-scrollbar.rs-table-scrollbar-pressed {
      opacity: 1 !important;
    }

    &:hover {
      opacity: 1;
    }

    > .rs-table-scrollbar-handle {
      background-color: $grey_6 !important;
      opacity: 1 !important;
      height: 8px;
      max-width: 100% !important;
    }
  }
}

.iconButtonResetGlobal {
  i.chevron.down.icon {
    font-size: 10px !important;
    margin-top: 4px;
  }
}

